made changes to about.html

--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
       </div>
       <!-- links -->
       <div class="nav-links">
-        <a href="index.html " class="nav-link">home</a>
-        <a href="about.html " class="nav-link">about</a>
-        <a href="tags.html" class="nav-link">tags</a>
-        <a href="recipes.html" class="nav-link">recipes</a>
+        <a href="./index.html " class="nav-link">home</a>
+        <a href="./about.html " class="nav-link">about</a>
+        <a href="./tags.html" class="nav-link">tags</a>
+        <a href="./recipes.html" class="nav-link">recipes</a>
         <div class="nav-link contact-link">
-          <a href="contact.html" class="btn">contact</a>
+          <a href="./contact.html" class="btn">contact</a>
         </div>
       </div>
     </nav>
